tests/rascal/negative/parse_errors/L3/formals2.ob
MODULE Bla;

PROCEDURE F(VAR x, y : INTEGER, y: INTEGER);
BEGIN
  x := 1
END F;

BEGIN
  F()
END Bla.
